# yasl

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  IO.c  IO.h  LICENSE  Makefile  README.md  VM.c  ast.py  azure-pipelines.yml  color.h  compiler.py  configure_tests.sh  constant.c  constant.h  constant_types.c  constant_types.py  debug.h  environment.py  escapes.x  functions.h  install.sh  interpreter.py  lexer.py  main.c  main.py  metadata.h  methods.h  methods.ysl  opcode.c  opcode.h  opcode.py  operators.ysl  parser.py  specialstrings.x  tests  tests.ps1  (+15 more)
benchmarks/: README.txt
benchmarks/fib_rec/: fib_rec.py  fib_rec.yasl
benchmarks/list_push/: list_push.py  list_push.yasl
bytebuffer/: bytebuffer.c  bytebuffer.h
compiler/: ast.c  ast.h  ast.py  compiler.c  compiler.h  compiler.py  constant.py  env.c  env.cpp  env.h  expr_nodetype.x  exprnodetype.x  lexer.c  lexer.cpp  lexer.h  lexer.py  lexinput.c  lexinput.h  main.py  middleend.c  middleend.h  nodetype.x  opcode.py  parser.c  parser.cpp  parser.h  parser.py  patt_nodetype.x  pattnodetype.x  reservedwords.x  stmt_nodetype.x  stmtnodetype.x  token.h  tokens.py  tokentype.x  visitor.py
compiler-c/: compiler.c  compiler.h  main.c  token.h
compiler-c/ast/: ast.c  ast.h
compiler-c/bytebuffer/: bytebuffer.c  bytebuffer.h
compiler-c/compiler/: compiler.c  compiler.h
compiler-c/env/: env.c  env.h
compiler-c/lexer/: lexer.c  lexer.h
compiler-c/parser/: parser.c  parser.h
compiler-py/: ast.py  environment.py  main.py  tokens.py
compiler/ast/: ast.c  ast.h
compiler/compiler/: compiler.c  compiler.h
compiler/lexer/: lexer.c  lexer.h  lexinput.c  lexinput.h
compiler/middleend/: middleend.c  middleend.h
compiler/parser/: parser.c  parser.h
compiler_c/: lexer.c  lexer.h  main.c  token.c  token.h
compiler_c/ast/: ast.c  ast.h
compiler_c/lexer/: lexer.c  lexer.h
compiler_c/parser/: parser.c  parser.h
data-structures/: LString.c  LString.h  README.md  YASL_Buffer.c  YASL_Buffer.h  YASL_ByteBuffer.c  YASL_ByteBuffer.h  YASL_HashTable.c  YASL_HashTable.h  YASL_List.c  YASL_List.h  YASL_Set.c  YASL_Set.h  YASL_String.c  YASL_String.h  YASL_StringSet.h  YASL_Table.c  YASL_Table.h  YASL_bytebuffer.c  YASL_bytebuffer.h  YASL_hashtable.c  YASL_hashtable.h  YASL_list.c  YASL_list.h  YASL_string.c  YASL_string.h  hash_function.c  hash_function.h  hashtable.c  hashtable.h
examples/: 2sum.ysl  controlflow.ysl  hailstone.ysl  helloworld.ysl  methods.ysl  operators.ysl  string.ysl  types.ysl
hash_function/: hash_function.c  hash_function.h
hashtable/: hashtable.c  hashtable.cpp  hashtable.h
interpreter/: VM.c  VM.h  YASL_Object.c  YASL_Object.h  YASL_string.c  YASL_string.h  bool_methods.c  bool_methods.h  builtins.c  builtins.cpp  builtins.h  closure.c  closure.h  constant.c  constant.h  float_methods.c  float_methods.cpp  float_methods.h  int_methods.c  int_methods.cpp  int_methods.h  interpret.c  list.c  list.h  list_methods.c  list_methods.cpp  list_methods.h  main.c  opcode.c  opcode.h  prime.c  prime.h  refcount.c  refcount.h  str_methods.c  str_methods.cpp  str_methods.h  table_methods.c  table_methods.h  undef_methods.c  (+9 more)
interpreter/VM/: VM.c  VM.h  operator_names.h
interpreter/YASL_Object/: YASL_Object.c  YASL_Object.h
interpreter/YASL_string/: YASL_string.c  YASL_string.h  refcountptr.c  refcountptr.h  str_methods.c  str_methods.h
interpreter/boolean/: bool_methods.c  bool_methods.h
interpreter/builtins/: builtins.c  builtins.h
interpreter/constant/: constant.c  constant.h
interpreter/file/: file_methods.c  file_methods.h
interpreter/float/: float64.c  float64.h  float64_methods.c  float64_methods.h  float_methods.c  float_methods.h  yasl_float.c
interpreter/hashtable/: hash_methods.c  hash_methods.h  hashtable.c  hashtable.h
interpreter/integer/: int64_methods.c  int64_methods.h  int_methods.c  int_methods.h
interpreter/list/: list.c  list.h  list_methods.c  list_methods.h
interpreter/map/: map_methods.c  map_methods.h
interpreter/prime/: prime.c  prime.h
interpreter/refcount/: refcount.c  refcount.h
interpreter/string8/: str_methods.c  str_methods.h  string8.c  string8.h
interpreter/table/: table_methods.c  table_methods.h
interpreter/undef/: undef_methods.c
interpreter/userdata/: userdata.c  userdata.h
interpreter/vtable/: vtable.c  vtable.h
prime/: prime.c  prime.h
src/: main.c  yasl.c  yasl.h  yasl_aux.c  yasl_aux.h  yasl_conf.h  yasl_error.h  yasl_include.h  yasl_plat.h  yasl_state.h
src/common/: README.txt  debug.h  migrations.h  opcode.h
src/compiler/: ast.c  ast.h  compiler.c  compiler.h  env.c  env.h  exprnodetype.x  lexer.c  lexer.h  (+9 more)
std/: random-numbers.c  yasl-std-collections.c  yasl-std-collections.h  yasl-std-error.c  yasl-std-error.h  yasl-std-io.c  yasl-std-io.h  yasl-std-math.c  yasl-std-math.h  yasl-std-mt.c  yasl-std-mt.h  yasl-std-os.c  yasl-std-require.c  yasl-std-require.h  yasl-std-try.c  yasl-std.h
std-collections/: set.c  set.h  yasl-std-collections.c  yasl-std-collections.h
std-io/: README.md  yasl-std-io.c  yasl-std-io.h
std-math/: LICENSE  README.md  yasl-std-math.c  yasl-std-math.cpp  yasl-std-math.h
std-require/: yasl-std-require.c  yasl-std-require.h
test/: assert_errors.inl  binoptest.c  binoptest.h  clitest.c  clitest.pl  compilertest.c  comprehensiontest.c  divisionbyzero_errors.inl  error_errors.inl  filetest.c  filetest.pl  foreachtest.c  fortest.c  fortest.h  iftest.c  iftest.h  inputs.inl  integration_tests.c  lexertest.c  literaltest.c  literaltest.h  memtest.c  memtest.pl  misctest.c  scripttest.inl  stackoverflow_errors.inl  syntax_errors.inl  test.c  test.yasl  test_module.c  test_util.c  test_util.h  try_fail.yasl  try_fail_errors.inl  type_errors.inl  unoptest.c  unoptest.h  value_errors.inl  vmtest.c  vmtest.pl  (+8 more)
test2/: README  assert_errors.inl  divisionbyzero_errors.inl  inputs.inl  integration_tests.c  outputs.inl  stackoverflow_errors.inl  test2.c  type_errors.inl  value_errors.inl
util/: IO.c  IO.h  hash_function.c  prime.c  varint.c  yasl_float.c  yasl_float.h
(+1203 files in other folders)
